edit action bug, fixed it